feat: initialize backend with task management API
- Added package.json for backend dependencies and scripts
- Implemented Express server with CORS and JSON parsing
- Created CRUD endpoints for task management
- Configured TypeScript with tsconfig.json

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 version: "3.8"
 services:
-  container:
+  frontend:
     image: node:latest
     working_dir: /app
     volumes:
@@ -12,14 +12,14 @@ services:
       - NODE_ENV=development
       - VITE_HOST=0.0.0.0
 
-  container2:
-    image: node:latest
+  backend:
+    build:
+      context: ./backend
     working_dir: /app
     volumes:
-      - ./:/app
-    command: sh -c "npm install && npm run dev -- --host"
+      - ./backend:/app
+    command: sh -c "npm install && npm run dev"
     ports:
-      - "5174:5173"
+      - "4000:4000"
     environment:
       - NODE_ENV=development
-      - VITE_HOST=0.0.0.0
