feat: integrate Sequelize with MySQL for task management
- Added Knex and Sequelize dependencies for database interaction.
- Created a MySQL service in Docker Compose with health checks.
- Implemented Sequelize models and database connection.
- Migrated task management API to use Sequelize for CRUD operations.
- Created migration and seed files for initial task table setup.
- Updated package.json and added necessary TypeScript types.

--- a/compose.yaml
+++ b/compose.yaml
@@ -23,3 +23,31 @@ services:
       - "4000:4000"
     environment:
       - NODE_ENV=development
+      - DB_HOST=mysql
+      - DB_PORT=3306
+      - DB_USER=root
+      - DB_PASSWORD=example
+      - DB_NAME=taskdb
+    depends_on:
+      mysql:
+        condition: service_healthy
+
+  mysql:
+    image: mysql:8
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: example
+      MYSQL_DATABASE: taskdb
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+      - ./backend/mysql-init:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+
+volumes:
+  mysql_data:
