--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,16 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "knex": "^3.1.0",
+    "mysql2": "^3.9.7",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
     "@types/express": "^4.17.21",
     "@types/node": "^20.4.2",
+    "@types/sequelize": "^4.28.20",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.0"
   }
