--- a/backend/package.json
+++ b/backend/package.json
@@ -12,13 +12,17 @@
     "express": "^4.18.2",
     "knex": "^3.1.0",
     "mysql2": "^3.9.7",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "swagger-ui-express": "^5.0.1",
+    "swagger-jsdoc": "^6.2.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
     "@types/express": "^4.17.21",
     "@types/node": "^20.4.2",
     "@types/sequelize": "^4.28.20",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/swagger-jsdoc": "^6.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.0"
   }
