Refactor backend structure: migrate to CommonJS, remove Sequelize integration, and reorganize API routes
- Changed main entry point from dist/index.js to src/index.js in package.json
- Updated development and start scripts to use nodemon for live reloading
- Removed Sequelize database connection and Task model files
- Implemented task-related API endpoints in a new controller
- Created separate route handling for task operations
- Reintroduced Swagger documentation for API endpoints
- Converted TypeScript files to JavaScript for compatibility

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,16 +2,11 @@ FROM node:latest
 
 WORKDIR /app
 
-# Install and upgrade yarn
-RUN npm install -g yarn && yarn set version stable
-
 COPY package.json yarn.lock* ./
 RUN yarn install
 
-COPY . .
-
-RUN yarn build
+COPY src ./src
 
 EXPOSE 4000
 
-CMD ["yarn", "start"]
+CMD ["node", "src/index.js"]
