--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,10 @@
 {
   "name": "task-dashboard-backend",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -17,13 +16,6 @@
     "swagger-jsdoc": "^6.2.8"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.18",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.4.2",
-    "@types/sequelize": "^4.28.20",
-    "@types/swagger-ui-express": "^4.1.3",
-    "@types/swagger-jsdoc": "^6.0.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.0"
+    "nodemon": "^3.1.0"
   }
 }
