--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,15 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^3.1.0",
     "mysql2": "^3.9.7",
     "sequelize": "^6.37.7",
     "swagger-ui-express": "^5.0.1",
-    "swagger-jsdoc": "^6.2.8"
+    "swagger-jsdoc": "^6.2.8",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
